syntax = "proto3";
package NKG.NetWork;

message C2R_Login // CSPacketBase
{
	int32 RpcId = 90;
	string	Account	 = 1;	// 帐号
	string	Password = 2;	// 密码
}

message R2C_Login // SCPacketBase
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Address = 1;
	int64 Key	    = 2;
}

message C2G_LoginGate // CSPacketBase
{
	int32 RpcId = 90;
	int64 Key = 1;	// 帐号		
}

message G2C_LoginGate // SCPacketBase
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	int64 PlayerId = 1;
}

message G2C_TestHotfixMessage // SCPacketBase
{
	string Info = 1;
}

message C2M_TestActorRequest // CSPacketBase
{
	int32 RpcId = 90;
	int64 ActorId = 91;
	string Info = 1;
}

message M2C_TestActorResponse // SCPacketBase
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	string Info = 1;
}

message PlayerInfo // CSPacketBase
{
	int32 RpcId = 90;
}

message C2G_PlayerInfo // CSPacketBase
{
	int32 RpcId = 90;
}

message G2C_PlayerInfo // SCPacketBase
{
	int32 RpcId = 90;
	int32 Error = 91;
	string Message = 92;
	PlayerInfo PlayerInfo = 1;
	repeated PlayerInfo PlayerInfos = 2;
    repeated string TestRepeatedString = 3;
    repeated int32 TestRepeatedInt32 = 4;
    repeated int64 TestRepeatedInt64 = 5;
}

message TestMsg // CSPacketBase
{
	int32 RpcId = 90;
}

message GFTestMsg // CSPacketBase
{
	int32 RpcId = 90;
	string Message = 91;
}

